* Added the REQUIREIDENTIFY permission - Nils McCarthy
* Added bzfs option to deny clients that do not identify - Nils McCarthy
* Color carried team flags according to their team - Sean Morrison
* Start of better spawn positions based on tanks - Dave Brosius
* PNG image writing for screenshots - Daniel Remenak
* Texture Manager only loads textures when needed - Jeff Myers
* Renamed and reorganized texture resources - Jeff Mey
* BZDB alternate image dir added - Jeff Myers
* Improved transparent proxy support - Alfredo Tupone, Sean Morrison
* Ground Texture Repeat added to BZDB, default increased to 0.1  - Jeff Myers
* Added ability to have and use per-team colored textures - Jeff Myers
* Added support for colored and zoned ground textures - Jeff Meyers
* Hunter tanks try to use "hunter" texture if found - Jeff Myers
* Hunter tanks are colored orange color if not using a texture - Jeff Myers
* Menu uses it's own image for the arrow, menu_arrow.png - Jeff Myers
* Rename team based datafiles to have the team in the name - Jeff Myers
* Map objects search for colored textures and use them if found - Jeff Myers
* Bases search for colored team textures and use them if found - Jeff Myers
* Added object-specified texture support for tanks & maps - Jeff Myers
* Menu Arrow supports animations - Jeff Myers
* Base wall and top textures - Jeff Myers
* Hunter name used for kill, lock, and info messages - Jeff Myers
* Increase resolution of textures to look better - Jeff Myers
* Add experimental quality setting for enhanced effects- Jeff Myers
* Tunf off tank LOD, and ground grid for experimental quality - Jeff Myers
* Add sides to the body of the hightank model - Jeff Myers

BZFlag 1.10.2
-------------

* improved transparent proxy support for server - Frank Thilo, Alfredo Tupone
* Stop infinite spawn loop with complex worlds containing big pyramids
* Misc Swear processing fixes - Sean Morrison
* Allow banfile to be empty or not exist
* Don't let zoned tanks flatten Burrowed tanks